--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DoorDashLite</string>
+    <string name="open">Open</string>
+    <string name="closed">Closed</string>
+    <string name="minute">min.</string>
 </resources>
